--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,18 @@
 name: login
 description: A new Flutter project.
 
+version: 1.0.0+1
+
+environment:
+  sdk: ">=2.1.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.0
   rxdart: ^0.18.0
+  http: ^0.12.0+2
+  shared_preferences: ^0.5.2+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
