--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   rxdart: ^0.18.0
   http: ^0.12.0+2
   shared_preferences: ^0.5.2+1
+  connectivity: ^0.4.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
