--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   http: ^0.12.0+2
   shared_preferences: ^0.5.2+1
   connectivity: ^0.4.2
+  dio: 3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
